# LRU-Cyber

./: .gitignore  CHANGELOG.md  DECISIONS.md  README.md  auto_scoring.py  contracts.md  db_manager.py  explication_convergence.md  main_daemon.py  matcher.py  mitre.py  mitre_v1_skeleton.json  mitre_v2_vectorized.json  pyproject.toml  specification_homogeneisation.md  vecteurs.md  vectorizer.py
.github/: copilot-instructions.md
Dashboard/: api.php  index.php
references/criticality/: criticality_weights.v1.yaml
references/d1_criticality/: README.md
references/d2_entropy/: README.md  d2_entropy_spec.v1.md  payload_field_rules.v1.yaml
references/d3_temporal/: README.md  d3_temporal_spec.v1.md  temporal_profiles.v1.yaml
references/d5_rarity/: README.md  d5_rarity_spec.v1.md  rarity_projection.v1.yaml
src/cyber_vpt/: __init__.py  match_result.py  vector5d.py
src/cyber_vpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_match_result.py  test_vector5d.py
